--- a/v2/src/containers/signup/style.less
+++ b/v2/src/containers/signup/style.less
@@ -828,10 +828,10 @@
                 text-align: center;
                 color: #666;
             }
-
-            tr:hover {
-                background-color: #CCE1FB !important;
-            }
+            //
+            // tr:hover {
+            //     background-color: #CCE1FB !important;
+            // }
 
             tr:nth-child(even) {
                 background-color: #fafafa;
@@ -842,6 +842,7 @@
                 font-size: 12px;
                 color: #666;
                 text-align: center;
+                border-bottom: 1px solid #ddd;
             }
 
             .btn-edit {
