--- a/v2/src/containers/admin/style.less
+++ b/v2/src/containers/admin/style.less
@@ -508,6 +508,25 @@
     min-width: 1190px;
     .border-box();
 
+    select {
+        display: block;
+        width: 300px;
+        height: 35px;
+        outline: none;
+        border-radius: 3px !important;
+        margin-left: 20px;
+        background: #fff;
+        border: 1px solid #ddd;
+        .border-box();
+        margin-bottom: 15px;
+        color: @color-grey3;
+        padding-left: 10px;
+        font-size: 12px;
+        float: right;
+        margin-top: 8px;
+        margin-right: 15px;
+    }
+
     .navbar {
         position: fixed;
         left: 0;
